# FinRizz

./: .env.example  DEPLOYMENT.md  LICENSE  README.md  README_0G.md  ROADMAP.md  SETUP_GUIDE.md  advanced_examples.py  bot.py  deploy-guide.html  deploy.sh  examples.py  firebase.json  index.html  netlify.toml  package.json  price_data_20250927_123818.json  price_data_20250927_124142.json  quick_setup.py  quick_start.py  requirements.txt  requirements_0g.txt  requirements_minimal.txt  simple_price_fetcher.py  style.css  test_api.py  vercel.json  web_api.py  zg_pyth_oracle.py
graph/: README.md  generator.json
graph/finrizz-tokenomics-risk-rust/: Cargo.toml  build.rs  schema.graphql  substreams.yaml
graph/finrizz-tokenomics-risk-rust/abi/: uni_contract.abi.json  v3_factory.abi.json
graph/finrizz-tokenomics-risk-rust/proto/: contract.proto
graph/finrizz-tokenomics-risk-rust/src/: lib.rs
graph/finrizz-tokenomics-risk-rust/src/abi/: mod.rs
graph/finrizz-tokenomics-risk-rust/src/pb/: contract.v1.rs
pyeth/: comprehensive_test.py  demo.py  demo_0g.py  pyth_oracle.py
src/: config.py  pyth_service.py
